--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "jspdf": "^3.0.3",
     "lucide-react": "^0.454.0",
     "mysql2": "^3.15.3",
-    "next": "15.2.4",
+    "next": "^15.5.6",
     "next-auth": "^4.24.13",
     "next-themes": "^0.4.6",
     "prisma": "^6.18.0",
